platform/k8s/base/core/opa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: argos-core
  labels:
    app.kubernetes.io/name: opa
    app.kubernetes.io/part-of: argos
spec:
  selector:
    app.kubernetes.io/name: opa
  ports:
    - name: http
      port: 8181
      targetPort: http
